[tool.poetry]
name = "language-transfer-spanish-llm"
version = "0.1.0"
description = ""
authors = ["Priyadarshi Roy <proy9714@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.1.6"
langchain-core = "^0.1.23"
langchain-community = "0.0.19"
openai = "^1.12.0"
pypdf = "^4.0.1"
faiss-cpu = "^1.7.4"
langchain-openai = "^0.0.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
